--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ python = "^3.8"
 "discord.py" = "^1.6.0"
 discord-py-slash-command = "^1.1.0"
 python-dotenv = "^0.16.0"
+replit = "^3.0.0"
 
 [tool.poetry.dev-dependencies]
 
